client/src/pages/results.scss
#resultsContainer {
  display: flex;
  //gap: 12px;
  @media screen and (max-width: 600px) {
    flex-direction: column;
  }
}

#sideBar {
  flex: 0 0 300px;
  .sideBarContainer {
    padding: 10px;
    border-bottom: 1px solid grey;
  }
  .sameRow {
    display: flex;
    margin: 5px 0px;
    gap: 5px;
    align-items: center;
    justify-content: space-between;
  }
  .link{
    &:hover{
      text-decoration: underline;
      cursor: pointer;
    }
  }
}

#results {
  flex: 1 0 0;
  /* enable grow, disable shrink */
}

